--- a/SportsPro2-Kirby/Main.css
+++ b/SportsPro2-Kirby/Main.css
@@ -1,5 +1,6 @@
 ﻿body {
     background-image:url(Images/basketball_wallpaper796.png);
+    background-repeat: no-repeat;
 
     font-family: Arial, sans-serif;
     
