--- a/SportsPro2-Kirby/Main.css
+++ b/SportsPro2-Kirby/Main.css
@@ -13,3 +13,51 @@
 .footer{
     margin-top: 30px;
 }
+tbody{
+
+}
+ thead{
+    background-color: blue;
+    color: white;
+}
+ section {
+    padding: 1em;
+}
+h1
+{
+    font-size: 165%;
+    margin-top: 0;
+    margin-bottom: .3em;
+}
+p {
+    margin-top: 1.8em;
+    margin-bottom: .5em;
+}
+label
+{
+    float: left;
+    width: 6em;
+}
+.entry
+{
+    margin-left: 1em;
+    margin-bottom: .5em;
+    width: 12em;
+}
+.validator {
+    color: Green;
+    margin-left: 1em;
+}
+.error {
+    color: green;
+}
+#ValidationSummary1 {
+    margin-top: 1em;
+}
+#txtID {
+    width: 6em;
+}
+#btnAdd {
+    margin-top: .5em;
+    width: 10em;
+}
